# Youbot-Kinect

./: README.md
src/tfdata/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
src/tfdata/src/: tf_broadcaster.cpp  tf_broadcaster.cpp~
src/youbot_navigation/youbot_navigation_common/config/: costmap_common_params.yaml  move_base_params.yaml
src/youbot_navigation/youbot_navigation_common/launch/: base_front_hokuyo_node.launch  bringup_navigation.launch
src/youbot_navigation/youbot_navigation_local/config/: global_costmap_params.yaml
src/youbot_navigation/youbot_navigation_local/launch/: move_base_local.launch
src/younav/: CMakeLists.txt  mainpage.dox  manifest.xml
src/younav/launch/: bringup.launch  mapping.launch
